# synciflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  synciflow.spec  synciflow_entry.py
.cursor/plans/: api-cli-local-load_cf6c58ec.plan.md  download-all-tracks-zip_995cc788.plan.md  job_and_notification_system_391db448.plan.md  likes-playlist-integration_862a53e2.plan.md  serve-frontend-with-backend_ae312040.plan.md  standalone_exe_build_42e78707.plan.md
assets/: index-BBRCJK2M.js  index-Bgg3k8aW.js  index-CalIZV5P.js
gh-pages/: index.html
src/synciflow/: __init__.py  config.py
src/synciflow/api/: server.py
src/synciflow/cli/: main.py  smart.py
src/synciflow/core/: job_manager.py  library_manager.py  notification_bus.py  playlist_manager.py  sync_manager.py  track_manager.py  utils.py
src/synciflow/db/: database.py  models.py
src/synciflow/frontend/: index.html
src/synciflow/frontend/assets/: index-BFw6fh8i.js  index-BzAicLca.css  index-CmXW1ha6.css  index-DdfmKVBz.css  index-V7crdoLj.js  index-xvKTRyS0.js
src/synciflow/schemas/: __init__.py  playlist.py  track.py
src/synciflow/services/: downloader.py  spotify_client.py  tagging.py  youtube.py
src/synciflow/storage/: file_manager.py  path_manager.py  playlist_metadata.py  zip_builder.py
tests/: test_placeholder.py
tests/synciflow/core/: youtube.py
web-app/assets/: index-B9N6zq5k.js  index-BNLlYGJJ.css
