[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "synciflow"
version = "0.0.1"
description = "Python package for the synciflow project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/synciflow"
Repository = "https://github.com/your-username/synciflow"
Issues = "https://github.com/your-username/synciflow/issues"

[tool.hatch.version]
path = "src/synciflow/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synciflow"]
