[build-system]
requires = [
  "hatchling>=1.27.0",
  "hatch-pyinstaller",
  # Needed in Hatch's isolated build env so PyInstaller can analyze/bundle imports
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "typer>=0.12",
  "sqlmodel>=0.0.24",
  "pydantic>=2.0",
  "yt-dlp>=2025.1.0",
  "mutagen>=1.47.0",
  "ffmpeg-python>=0.2.0",
  "rich>=13.0.0",
  "spotapi",
  "pymongo",
  "redis",
]
build-backend = "hatchling.build"

[project]
name = "synciflow"
version = "3.0.0"
description = "Python package for the synciflow project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AdelElawady", email = "adel50ali50@gmail.com" },
]
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "typer>=0.12",
  "sqlmodel>=0.0.24",
  "pydantic>=2.0",
  "spotipy>=2.26.0",
  "yt-dlp>=2025.1.0",
  "mutagen>=1.47.0",
  "ffmpeg-python>=0.2.0",
  "rich>=13.0.0",
  "spotapi",
  "pymongo",
  "redis",
]

[project.scripts]
synciflow = "synciflow.cli.main:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/adelelawady/synciflow"
Repository = "https://github.com/adelelawady/synciflow"
Issues = "https://github.com/adelelawady/synciflow/issues"

[tool.hatch.version]
path = "src/synciflow/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/src/synciflow/frontend",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synciflow"]
include = [
  "src/synciflow/frontend/**",
]

[tool.hatch.build.targets.pyinstaller]
require-runtime-dependencies = true
# Ensure the build env installs the project (and its dependencies)
require-project = true
scriptname = "synciflow.spec"
flags = ["--clean"]
log-level = "WARN"
